--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">  
+  <link href="https://mathark1.github.io/Certificard.alura/style.css" rel="stylesheet"/>  
 </head>
 <body>
 <section>
